--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "VÅÑNQÜÏSHËR MODEL 1",
   "version": "1.0.0",
-  "description": "Simple Bot Whatsapp With Baileys",
+  "description": "Simple Bot WhatsApp With Baileys",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
@@ -17,31 +17,20 @@
     "canvas-hikki": "github:KirBotz/canvas-hikki",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
-    "child_process": "^1.0.2",
-    "crypto": "^1.0.1",
-    "digitalocean": "^1.2.1",
-    "discord.js": "^14.14.1",
-    "fake-useragent": "^1.0.1",
+    "express": "^4.18.2", // Added express
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
-    "javascript-obfuscator": "^4.0.0",
     "jimp": "^0.16.1",
     "knights-canvas": "github:KirBotz/knights-canvas",
     "moment-timezone": "^0.5.34",
-    "multistream": "^2.1.0",
     "node-fetch": "^2.6.7",
     "node-webpmux": "^3.1.0",
     "openai": "^3.3.0",
-    "os": "^0.1.1",
     "parse-ms": "^2.1.0",
     "pino": "^8.1.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
-    "readline": "^1.3.0",
-    "request": "^2.88.2",
     "rimraf": "^3.0.2",
-    "spinnies": "^0.5.1",
-    "ssh2": "^1.14.0",
-    "util": "^0.12.5"
+    "spinnies": "^0.5.1"
   }
 }
