--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "canvas-hikki": "github:KirBotz/canvas-hikki",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
-    "express": "^4.18.2", // Added express
+    "express": "^4.18.2",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "jimp": "^0.16.1",
