--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "pino": "^8.1.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
-    "request": "^2.88.2", // Added request
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "spinnies": "^0.5.1"
   }
