--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jimp": "^0.16.1",
     "knights-canvas": "github:KirBotz/knights-canvas",
     "moment-timezone": "^0.5.34",
+    "multistream": "^2.1.0",
     "node-fetch": "^2.6.7",
     "node-webpmux": "^3.1.0",
     "openai": "^3.3.0",
