--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.18.2",
+    "fake-useragent": "^1.0.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "jimp": "^0.16.1",
