--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
+    "multistream": "^4.1.0",
     "request": "^2.88.2",
     "baileys": "npm:@whiskeysockets/baileys@^6.7.7",
     "canvas-hikki": "github:KirBotz/canvas-hikki",
